<?xml version="1.0"?>
<package format="2">
  <name>gps_agent_pkg</name>
  <version>0.0.0</version>

  <maintainer email="cbfinn@eecs.berkeley.edu">Chelsea Finn</maintainer>

  <description>Reimplementation of the Guided Policy Search (GPS) algorithm and LQG-based trajectory optimization.</description>
  <author></author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>pr2_mechanism_model</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pr2_controller_manager</build_depend>

  <export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>

</package>


